PXD-1839 fix(overlap): fix chart text overlap bug (#360)
* fix(overlap): fix chart text overlap bug

* fix(pie-chart): pie chart legend with to 40 percent

--- a/src/components/charts/SummaryHorizontalBarChart/SummaryHorizontalBarChart.less
+++ b/src/components/charts/SummaryHorizontalBarChart/SummaryHorizontalBarChart.less
@@ -6,6 +6,25 @@
   }
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+
+.summary-horizontal-bar-chart__legend {
+  width: 20%;
+  float: left;
+}
+
+.summary-horizontal-bar-chart__legend-item {
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 1em;
+  letter-spacing: .03rem;
+  color: #606060;
+  margin: 8px 0;
+  text-align: right;
 }
 
 .summary-horizontal-bar-chart__title-box {
@@ -19,10 +38,8 @@
   margin-bottom: 12px;
 }
 
-.summary-horizontal-bar-chart__y-axis {
-  font-size: 12px;
-  font-weight: regular;
-  line-height: 1em;
-  letter-spacing: .03rem;
-  color: #606060;
+.summary-horizontal-bar-chart__responsive-container {
+  float: right;
+  width: 80%;
+  height: 100%;
 }
