--- a/src/components/charts/SummaryPieChart/SummaryPieChart.less
+++ b/src/components/charts/SummaryPieChart/SummaryPieChart.less
@@ -20,7 +20,7 @@
 }
 
 .summary-pie-chart__legend {
-  width: 70px;
+  width: 40%;
   flex-grow: 0;
   padding-top: 8px;
 }
@@ -32,4 +32,10 @@
 
 .summary-pie-chart__legend-item-value {
   margin-top: 8px;
+}
+
+.summary-pie-chart__legend-item-name {
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
